[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lowtran-piccia"
version = "0.1.1"
description = " Model of Earth atmosphere absorption and transmission vs. wavelength and location."
keywords = ["mesosphere", "stratosphere", "thermosphere", "atmosphere"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Programming Language :: Fortran",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["readme"]
requires-python = ">=3.9"
dependencies = ["numpy", "xarray", "python-dateutil"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy", "types-python-dateutil"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src", "example"]
allow_redefinition = true
ignore_missing_imports = true
