[metadata]
name = lowtran-piccia
version = 0.1.0
author = Francesco Picciariello
author_email = francesco.picciariello@unipd.it
description = Model of Earth atmosphere absorption and transmission vs. wavelength and location.
url = https://github.com/francescopiccia/lowtran-piccia
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  python-dateutil
  numpy >= 1.16
  xarray
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
  types-python-dateutil
plot =
  matplotlib
  seaborn
